--- a/src/docs/userguide/mavenPoms.tex
+++ b/src/docs/userguide/mavenPoms.tex
@@ -69,8 +69,8 @@ To use dom4j with XPath support, you have to declare Jaxen as a first level depe
 \label{sec:mavens_inflexible_transitive_dependencies}
 
 \subsubsection{Mavens inflexible transitive dependencies}
-In Maven’s dependency handling a jar has one and only one set of dependencies.\footnote{The Maven scope (e.g. compile, runtime, ...) represent different subset of dependencies. But this does not offer a solution for the mentioned problem here.} In Maven terms, one artifact in the ibiblio repository has one and only set of runtime dependencies. This probably does not reflects reality very well. Take the hibernate module. Depending on the usage scenario, its real set of dependencies differ. There might be a hibernate\_without\_cache, hibernate\_with\_tangosol, ... . Or have a look at \ref{sub:mavens_fake_first_level_dependencies}. It would be nice if there could be a dom4j and a dom4j-with-xpath. What Maven offers is the \texttt{optional} keyword. One declares in the repository pom all dependencies which are not necessarily required as optinal. The \texttt{only} purpose of declaring the optional dependencies is for taking the \texttt{version} of this optional dependency into account, if the same dependency is required somewhere else. The optional declarations are handy though for copy and paste. Which already indicates one of the problems. All the projects in the world which need Hibernate with Tangosol have to specify the set of dependencies needed for this. This is against DRY. 
-Maven's lack of multiple configurations for a module also causes another problem. Many pom's in the ibiblio repository are incorrect. For example commons-httpclient-3.0 has junit as a runtime dependency. There is the reasonable policy, that once a pom has made it to ibiblio, it must not be changed to provide reproducibility of the builds. This bug could only be fixed for the next version of commons-http-client (3.1.). If there were the possibility to provide multiple sets of runtime dependencies for a given jar, you could add a correct set of dependencies with a new label. This would not change existing builds but give other builds the possibility to use the correct set of dependencies. A solution to deal with wrong pom data is to use Maven's exclude tag in the dependency declaration. In the case of commons-httpclient-3.0 you would add an exclude tag for junit. Gradle offers something similar. See \ref{ssub:module_dependencies}
+In Maven’s dependency handling a jar has one and only one set of dependencies.\footnote{The Maven scope (e.g. compile, runtime, ...) represent different subset of dependencies. But this does not offer a solution for the mentioned problem here.} In Maven terms, one artifact in the Maven2 repo has one and only set of runtime dependencies. This probably does not reflects reality very well. Take the hibernate module. Depending on the usage scenario, its real set of dependencies differ. There might be a hibernate\_without\_cache, hibernate\_with\_tangosol, ... . Or have a look at \ref{sub:mavens_fake_first_level_dependencies}. It would be nice if there could be a dom4j and a dom4j-with-xpath. What Maven offers is the \texttt{optional} keyword. One declares in the repository pom all dependencies which are not necessarily required as optinal. The \texttt{only} purpose of declaring the optional dependencies is for taking the \texttt{version} of this optional dependency into account, if the same dependency is required somewhere else. The optional declarations are handy though for copy and paste. Which already indicates one of the problems. All the projects in the world which need Hibernate with Tangosol have to specify the set of dependencies needed for this. This is against DRY. 
+Maven's lack of multiple configurations for a module also causes another problem. Many pom's in the Maven2 repo are incorrect. For example commons-httpclient-3.0 has junit as a runtime dependency. There is the reasonable policy, that once a pom has made it the Maven2 repo, it must not be changed to provide reproducibility of the builds. This bug could only be fixed for the next version of commons-http-client (3.1.). If there were the possibility to provide multiple sets of runtime dependencies for a given jar, you could add a correct set of dependencies with a new label. This would not change existing builds but give other builds the possibility to use the correct set of dependencies. A solution to deal with wrong pom data is to use Maven's exclude tag in the dependency declaration. In the case of commons-httpclient-3.0 you would add an exclude tag for junit. Gradle offers something similar. See \ref{ssub:module_dependencies}
 % subsection mavens_inflexible_transitive_dependencies (end)
 
 \section{Duplicate Dependencies} % (fold)
