--- a/src/toplevel/changelog.txt
+++ b/src/toplevel/changelog.txt
@@ -1,15 +1,5 @@
-
-Release Notes - Gradle - Version 0.1.2
-
-
-** Bug
-    * [GRADLE-48] - Failing integ test under windows leads to consol exit if started via gradlew
-    * [GRADLE-58] - Windows console closed on build failure
-    * [GRADLE-63] - Modify header of *nix gradle script
+Release Notes - Gradle - Version 0.1.3
 
 ** Improvement
-    * [GRADLE-41] - Offer a flag to control whether the build should stop when Ivy can't find a dependency.
-    * [GRADLE-61] - Rename addIBiblio to addMavenRepo
-    * [GRADLE-65] - Make ivy info log level the default
-
+    * [GRADLE-70] - Avoid unnecessary Ivy resolves
 
